first steps against xss, probably more to come

--- a/template.html
+++ b/template.html
@@ -21,7 +21,7 @@
 				In OBS select Help &gt; Log Files &gt; Upload last Log File. Copy the URL and paste it here.
 			</p>
 		</div>
-		<div class="row m-3">
+		<div class="row mx-3">
 			<div class="col">
 				<form method="get" action="">
 					<fieldset>
@@ -31,7 +31,7 @@
 									<div "input-group-prepend">
 										<span class="input-group-text">Log URL input</span>
 									</div>
-									<input class="form-control" id="logUrlInput" aria-describedby="urlHelp" placeholder="{ph}" name="url" type="text">
+									<input class="form-control" id="logUrlInput" aria-describedby="urlHelp" placeholder="Paste log URL here" value="{ph}" name="url" type="text">
 									<div class="input-group-append">
 										<button type="submit" class="btn btn-primary">Analyze</button>
 									</div>
